--- a/package.json
+++ b/package.json
@@ -1,36 +1,55 @@
 {
-	"name": "myskul",
-	"private": true,
-	"version": "0.0.0",
+	"name": "skul-app",
 	"type": "module",
+	"version": "0.0.0",
+	"private": true,
+	"packageManager": "pnpm@9.12.1",
+	"license": "Apache-2.0",
 	"scripts": {
-		"dev": "vite",
 		"build": "vite build",
-		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"check-types": "tsc --pretty -p tsconfig.json",
+		"dev": "vite",
+		"lint:check-types": "tsc --pretty -p tsconfig.json",
+		"lint:eslint": "eslint --cache --max-warnings 0 --report-unused-disable-directives",
+		"lint:format": "prettier --cache --write .",
+		"prepare": "husky",
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router": "^6.23.1",
-		"react-router-dom": "^6.23.1",
-		"remixicon": "^4.2.0"
+		"@zayne-labs/callapi": "1.0.0-rc.10",
+		"clsx": "^2.1.1",
+		"react-router-dom": "^6.27.0",
+		"remixicon": "^4.2.0",
+		"tailwind-merge": "^2.5.4"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.66",
-		"@types/react-dom": "^18.2.22",
-		"@vitejs/plugin-react": "^4.2.1",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-plugin-react": "^7.34.1",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.6",
+		"@eslint-react/eslint-plugin": "^1.15.0",
+		"@iconify/react": "^5.0.2",
+		"@tanstack/eslint-plugin-query": "^5.59.7",
+		"@total-typescript/ts-reset": "^0.6.1",
+		"@types/node": "^22.7.5",
+		"@types/react": "^18.3.11",
+		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react-swc": "^3.7.1",
+		"@zayne-labs/eslint-config": "^0.2.6",
+		"@zayne-labs/tsconfig": "^0.2.1",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.12.0",
+		"eslint-plugin-react-hooks": "^5.0.0",
+		"eslint-plugin-react-refresh": "^0.4.12",
+		"eslint-plugin-tailwindcss": "^3.17.5",
+		"husky": "^9.1.6",
+		"lint-staged": "^15.2.10",
+		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
-		"prettier-plugin-classnames": "^0.7.2",
+		"prettier-plugin-classnames": "^0.7.3",
 		"prettier-plugin-merge": "^0.7.1",
-		"prettier-plugin-tailwindcss": "^0.6.6",
-		"postcss": "^8.4.38",
-		"tailwindcss": "^3.4.3",
-		"vite": "^5.2.0"
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"react": "19.0.0-rc-9d2da591-20240808",
+		"react-dom": "19.0.0-rc-9d2da591-20240808",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3",
+		"vite": "^5.4.9",
+		"vite-tsconfig-paths": "^5.0.1"
 	}
 }
