--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@zayne-labs/callapi": "1.0.0-rc.10",
+		"@hookform/resolvers": "^3.9.0",
+		"@zayne-labs/callapi": "1.0.0-rc.11",
 		"clsx": "^2.1.1",
+		"react-hook-form": "^7.53.0",
 		"react-router-dom": "^6.27.0",
 		"remixicon": "^4.2.0",
-		"tailwind-merge": "^2.5.4"
+		"tailwind-merge": "^2.5.4",
+		"vaul": "^1.1.0"
 	},
 	"devDependencies": {
 		"@eslint-react/eslint-plugin": "^1.15.0",
+		"@hookform/devtools": "^4.3.1",
 		"@iconify/react": "^5.0.2",
 		"@tanstack/eslint-plugin-query": "^5.59.7",
 		"@total-typescript/ts-reset": "^0.6.1",
@@ -45,8 +49,8 @@
 		"prettier-plugin-classnames": "^0.7.3",
 		"prettier-plugin-merge": "^0.7.1",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"react": "19.0.0-rc-9d2da591-20240808",
-		"react-dom": "19.0.0-rc-9d2da591-20240808",
+		"react": "19.0.0-rc-bf7e210c-20241017",
+		"react-dom": "19.0.0-rc-bf7e210c-20241017",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.9",
