--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^3.9.0",
 		"@zayne-labs/callapi": "1.0.0-rc.11",
+		"@zayne-labs/toolkit": "^0.5.0",
 		"clsx": "^2.1.1",
 		"react-hook-form": "^7.53.0",
 		"react-router-dom": "^6.27.0",
