--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"type": "module",
 	"version": "0.0.0",
 	"private": true,
-	"packageManager": "pnpm@9.12.1",
+	"packageManager": "pnpm@9.12.2",
 	"license": "Apache-2.0",
 	"scripts": {
 		"build": "vite build",
@@ -16,14 +16,18 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-focus-scope": "^1.1.0",
+		"@radix-ui/react-select": "^2.1.2",
 		"@zayne-labs/callapi": "1.0.0-rc.11",
 		"@zayne-labs/toolkit": "^0.5.0",
 		"clsx": "^2.1.1",
 		"react-hook-form": "^7.53.0",
 		"react-router-dom": "^6.27.0",
 		"remixicon": "^4.2.0",
+		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.4",
-		"vaul": "^1.1.0"
+		"vaul": "^1.1.0",
+		"zustand": "^5.0.0"
 	},
 	"devDependencies": {
 		"@eslint-react/eslint-plugin": "^1.15.0",
@@ -52,6 +56,7 @@
 		"react": "19.0.0-rc-bf7e210c-20241017",
 		"react-dom": "19.0.0-rc-bf7e210c-20241017",
 		"tailwindcss": "^3.4.14",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.9",
 		"vite-tsconfig-paths": "^5.0.1"
