feat: enhance register pages and layout
- Refactored the `RegisterStudentPage`, `RegisterSubjectPage`, and `RegisterClassPage` components to improve form handling and layout
- Added new `ViewAllStudentsPage` and `ViewSingleStudentPage` components to the dashboard navigation
- Updated the `VaulSidebar` component to include the new student view pages
- Adjusted the `DashBoardLayout` component to use the `min-h-svh` utility class for better layout handling
- Introduced the `SonnerToaster` component to the `App` component for global error handling
- Added the `RouteIndicator` icon component
- Updated the `index.html` file to set the root element's class to `flex min-h-svh flex-col` for improved layout
- Bumped up the versions of several dependencies, including `react-hook-form`, `remixicon`, and `@zayne-labs/eslint-config`

--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
 		"@zayne-labs/callapi": "1.0.0-rc.11",
 		"@zayne-labs/toolkit": "^0.5.0",
 		"clsx": "^2.1.1",
-		"react-hook-form": "^7.53.0",
+		"next-themes": "^0.3.0",
+		"react-hook-form": "^7.53.1",
 		"react-router-dom": "^6.27.0",
-		"remixicon": "^4.2.0",
+		"remixicon": "^4.4.0",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.4",
 		"vaul": "^1.1.0",
@@ -35,16 +36,16 @@
 		"@iconify/react": "^5.0.2",
 		"@tanstack/eslint-plugin-query": "^5.59.7",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "^22.7.5",
+		"@types/node": "^22.7.8",
 		"@types/react": "^18.3.11",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.7.1",
-		"@zayne-labs/eslint-config": "^0.2.6",
+		"@zayne-labs/eslint-config": "^0.2.8",
 		"@zayne-labs/tsconfig": "^0.2.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
-		"eslint-plugin-react-refresh": "^0.4.12",
+		"eslint-plugin-react-refresh": "^0.4.13",
 		"eslint-plugin-tailwindcss": "^3.17.5",
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
