--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"@radix-ui/react-focus-scope": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.2",
 		"@zayne-labs/callapi": "1.0.0-rc.11",
-		"@zayne-labs/toolkit": "^0.5.0",
+		"@zayne-labs/toolkit": "^0.6.1",
 		"clsx": "^2.1.1",
 		"next-themes": "^0.3.0",
 		"react-hook-form": "^7.53.1",
@@ -27,8 +27,7 @@
 		"remixicon": "^4.4.0",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.4",
-		"vaul": "^1.1.0",
-		"zustand": "^5.0.0"
+		"vaul": "^1.1.0"
 	},
 	"devDependencies": {
 		"@eslint-react/eslint-plugin": "^1.15.0",
@@ -36,16 +35,16 @@
 		"@iconify/react": "^5.0.2",
 		"@tanstack/eslint-plugin-query": "^5.59.7",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "^22.7.8",
-		"@types/react": "^18.3.11",
+		"@types/node": "^22.8.1",
+		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.7.1",
-		"@zayne-labs/eslint-config": "^0.2.8",
+		"@zayne-labs/eslint-config": "^0.2.9",
 		"@zayne-labs/tsconfig": "^0.2.1",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.13.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
-		"eslint-plugin-react-refresh": "^0.4.13",
+		"eslint-plugin-react-refresh": "^0.4.14",
 		"eslint-plugin-tailwindcss": "^3.17.5",
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
@@ -59,7 +58,7 @@
 		"tailwindcss": "^3.4.14",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.6.3",
-		"vite": "^5.4.9",
+		"vite": "^5.4.10",
 		"vite-tsconfig-paths": "^5.0.1"
 	}
 }
