--- a/package.json
+++ b/package.json
@@ -16,26 +16,29 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-focus-scope": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.2",
-		"@zayne-labs/callapi": "1.0.0-rc.11",
-		"@zayne-labs/toolkit": "^0.6.1",
+		"@zayne-labs/callapi": "1.0.0-rc.14",
+		"@zayne-labs/toolkit": "^0.6.2",
 		"clsx": "^2.1.1",
 		"next-themes": "^0.3.0",
 		"react-hook-form": "^7.53.1",
 		"react-router-dom": "^6.27.0",
-		"remixicon": "^4.4.0",
+		"remixicon": "^4.5.0",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.4",
-		"vaul": "^1.1.0"
+		"vaul": "^1.1.1",
+		"zod": "^3.23.8",
+		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
-		"@eslint-react/eslint-plugin": "^1.15.0",
+		"@eslint-react/eslint-plugin": "^1.15.2",
 		"@hookform/devtools": "^4.3.1",
 		"@iconify/react": "^5.0.2",
 		"@tanstack/eslint-plugin-query": "^5.59.7",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "^22.8.1",
+		"@types/node": "^22.8.4",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.7.1",
