--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-focus-scope": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.2",
-		"@zayne-labs/callapi": "1.0.0-rc.14",
+		"@tanstack/react-query": "^5.59.19",
+		"@zayne-labs/callapi": "1.0.0-rc.15",
 		"@zayne-labs/toolkit": "^0.6.2",
 		"clsx": "^2.1.1",
-		"next-themes": "^0.3.0",
+		"next-themes": "^0.4.1",
 		"react-hook-form": "^7.53.1",
 		"react-router-dom": "^6.27.0",
 		"remixicon": "^4.5.0",
-		"sonner": "^1.5.0",
+		"sonner": "^1.7.0",
 		"tailwind-merge": "^2.5.4",
 		"vaul": "^1.1.1",
 		"zod": "^3.23.8",
@@ -37,15 +38,16 @@
 		"@hookform/devtools": "^4.3.1",
 		"@iconify/react": "^5.0.2",
 		"@tanstack/eslint-plugin-query": "^5.59.7",
+		"@tanstack/react-query-devtools": "^5.59.19",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "^22.8.4",
+		"@types/node": "^22.8.7",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.7.1",
 		"@zayne-labs/eslint-config": "^0.2.9",
 		"@zayne-labs/tsconfig": "^0.2.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.13.0",
+		"eslint": "^9.14.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"eslint-plugin-tailwindcss": "^3.17.5",
@@ -53,7 +55,7 @@
 		"lint-staged": "^15.2.10",
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
-		"prettier-plugin-classnames": "^0.7.3",
+		"prettier-plugin-classnames": "^0.7.4",
 		"prettier-plugin-merge": "^0.7.1",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"react": "19.0.0-rc-bf7e210c-20241017",
