feat(layout): Add RootLayout component for routing structure feat(api): Update callBackendApi to include auth handling feat(api): Introduce ClassData type for API responses fix(toaster): Reduce duration of toast notifications fix(dashboard): Adjust padding in Main component refactor(For): Change PolymorphicPropsWithRef to PolymorphicProps fix(register): Reorder imports for consistency fix(form): Update PolymorphicProps usage in Form components chore(package): Update dependencies to latest versions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
 		"allowJs": true
 	},
 
-	"include": ["src/**/*.tsx", "src/**/*.ts", "tailwind.config.ts"],
+	"include": ["src/**/*.tsx", "src/**/*.ts", "tailwind.config.ts", "vite.config.ts"],
 	"exclude": ["dist", "node_modules/**"]
 }
