--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"clsx": "^2.1.1",
 		"next-themes": "^0.4.3",
 		"react-hook-form": "^7.53.2",
-		"react-router-dom": "^6.28.0",
+		"react-router-dom": "6.27.0",
 		"remixicon": "^4.5.0",
 		"sonner": "^1.7.0",
 		"tailwind-merge": "^2.5.4",
