--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-focus-scope": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.2",
-		"@tanstack/react-query": "^5.59.20",
-		"@zayne-labs/callapi": "1.0.0-rc.32",
-		"@zayne-labs/toolkit": "^0.6.4",
+		"@tanstack/react-query": "^5.61.0",
+		"@zayne-labs/callapi": "1.0.0-rc.34",
+		"@zayne-labs/toolkit": "^0.6.8",
 		"clsx": "^2.1.1",
+		"export-to-csv": "^1.4.0",
 		"next-themes": "^0.4.3",
 		"react-hook-form": "^7.53.2",
 		"react-router-dom": "6.27.0",
@@ -34,36 +35,36 @@
 		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
-		"@eslint-react/eslint-plugin": "^1.16.1",
+		"@eslint-react/eslint-plugin": "^1.17.1",
 		"@hookform/devtools": "^4.3.1",
 		"@iconify/react": "^5.0.2",
 		"@tanstack/eslint-plugin-query": "^5.60.1",
-		"@tanstack/react-query-devtools": "^5.59.20",
+		"@tanstack/react-query-devtools": "^5.61.0",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "^22.9.0",
+		"@types/node": "^22.9.1",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.7.1",
-		"@zayne-labs/eslint-config": "^0.2.9",
+		"@zayne-labs/eslint-config": "^0.2.12",
 		"@zayne-labs/tsconfig": "^0.2.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.14.0",
+		"eslint": "^9.15.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"eslint-plugin-tailwindcss": "^3.17.5",
-		"husky": "^9.1.6",
+		"husky": "^9.1.7",
 		"lint-staged": "^15.2.10",
-		"postcss": "^8.4.47",
+		"postcss": "^8.4.49",
 		"prettier": "^3.3.3",
 		"prettier-plugin-classnames": "^0.7.4",
 		"prettier-plugin-merge": "^0.7.1",
-		"prettier-plugin-tailwindcss": "^0.6.8",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"react": "19.0.0-rc-bf7e210c-20241017",
 		"react-dom": "19.0.0-rc-bf7e210c-20241017",
-		"tailwindcss": "^3.4.14",
+		"tailwindcss": "^3.4.15",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.6.3",
-		"vite": "^5.4.10",
-		"vite-tsconfig-paths": "^5.1.2"
+		"typescript": "^5.7.2",
+		"vite": "^5.4.11",
+		"vite-tsconfig-paths": "^5.1.3"
 	}
 }
