--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-focus-scope": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.2",
-		"@tanstack/react-query": "^5.61.0",
+		"@tanstack/react-query": "^5.61.3",
 		"@zayne-labs/callapi": "1.0.0-rc.34",
-		"@zayne-labs/toolkit": "^0.6.8",
+		"@zayne-labs/toolkit": "0.7.0",
 		"clsx": "^2.1.1",
 		"export-to-csv": "^1.4.0",
 		"next-themes": "^0.4.3",
 		"react-hook-form": "^7.53.2",
-		"react-router-dom": "6.27.0",
+		"react-router-dom": "7.0.1",
 		"remixicon": "^4.5.0",
 		"sonner": "^1.7.0",
-		"tailwind-merge": "^2.5.4",
+		"tailwind-merge": "^2.5.5",
 		"vaul": "^1.1.1",
 		"zod": "^3.23.8",
 		"zustand": "^5.0.1"
@@ -38,10 +38,10 @@
 		"@eslint-react/eslint-plugin": "^1.17.1",
 		"@hookform/devtools": "^4.3.1",
 		"@iconify/react": "^5.0.2",
-		"@tanstack/eslint-plugin-query": "^5.60.1",
-		"@tanstack/react-query-devtools": "^5.61.0",
+		"@tanstack/eslint-plugin-query": "^5.61.3",
+		"@tanstack/react-query-devtools": "^5.61.3",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "^22.9.1",
+		"@types/node": "^22.9.3",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.7.1",
