--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
+		"@number-flow/react": "^0.4.2",
 		"@radix-ui/react-focus-scope": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.2",
 		"@tanstack/react-query": "^5.62.2",
-		"@zayne-labs/callapi": "1.0.0-rc.44",
+		"@zayne-labs/callapi": "1.0.0-rc.48",
 		"@zayne-labs/toolkit": "0.7.0",
 		"clsx": "^2.1.1",
 		"export-to-csv": "^1.4.0",
