--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
 		"@radix-ui/react-focus-scope": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.2",
 		"@tanstack/react-query": "^5.62.2",
-		"@zayne-labs/callapi": "1.0.0-rc.48",
+		"@zayne-labs/callapi": "1.0.0-rc.56",
 		"@zayne-labs/toolkit": "0.7.0",
 		"clsx": "^2.1.1",
 		"export-to-csv": "^1.4.0",
 		"next-themes": "^0.4.3",
+		"react": "19.0.0-rc.1",
+		"react-dom": "19.0.0-rc.1",
 		"react-hook-form": "^7.53.2",
 		"react-router-dom": "7.0.2",
 		"remixicon": "^4.5.0",
@@ -60,8 +62,6 @@
 		"prettier-plugin-classnames": "^0.7.4",
 		"prettier-plugin-merge": "^0.7.1",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"react": "19.0.0-rc-bf7e210c-20241017",
-		"react-dom": "19.0.0-rc-bf7e210c-20241017",
 		"tailwindcss": "^3.4.16",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.7.2",
