--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 		"@radix-ui/react-focus-scope": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.2",
 		"@tanstack/react-query": "^5.62.7",
-		"@zayne-labs/callapi": "1.0.0-rc.56",
-		"@zayne-labs/toolkit": "0.8.4",
+		"@zayne-labs/callapi": "1.0.0-rc.58",
+		"@zayne-labs/toolkit": "0.8.9",
 		"clsx": "^2.1.1",
 		"export-to-csv": "^1.4.0",
 		"next-themes": "^0.4.4",
@@ -30,6 +30,7 @@
 		"react-dom": "19.0.0-rc.1",
 		"react-hook-form": "^7.53.2",
 		"react-router-dom": "7.0.2",
+		"recharts": "^2.15.0",
 		"remixicon": "^4.5.0",
 		"sonner": "^1.7.0",
 		"tailwind-merge": "^2.5.5",
