--- a/package.json
+++ b/package.json
@@ -16,57 +16,60 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^3.9.1",
-		"@number-flow/react": "^0.4.2",
-		"@radix-ui/react-focus-scope": "^1.1.0",
-		"@radix-ui/react-select": "^2.1.2",
-		"@tanstack/react-query": "^5.62.7",
-		"@zayne-labs/callapi": "1.0.0-rc.58",
-		"@zayne-labs/toolkit": "0.8.9",
+		"@hookform/resolvers": "^3.10.0",
+		"@number-flow/react": "^0.5.1",
+		"@radix-ui/react-focus-scope": "^1.1.1",
+		"@radix-ui/react-select": "^2.1.4",
+		"@tanstack/react-query": "^5.62.16",
+		"@zayne-labs/callapi": "1.0.0-rc.72",
+		"@zayne-labs/toolkit": "0.8.26",
+		"@zayne-labs/ui-react": "^0.1.4",
+		"aos": "3.0.0-beta.6",
 		"clsx": "^2.1.1",
 		"export-to-csv": "^1.4.0",
 		"next-themes": "^0.4.4",
-		"react": "19.0.0-rc.1",
-		"react-dom": "19.0.0-rc.1",
-		"react-hook-form": "^7.53.2",
-		"react-router-dom": "7.0.2",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-hook-form": "^7.54.2",
+		"react-router-dom": "7.1.1",
 		"recharts": "^2.15.0",
-		"remixicon": "^4.5.0",
-		"sonner": "^1.7.0",
-		"tailwind-merge": "^2.5.5",
-		"vaul": "^1.1.1",
-		"zod": "^3.23.8",
-		"zustand": "^5.0.1"
+		"remixicon": "^4.6.0",
+		"sonner": "^1.7.1",
+		"tailwind-merge": "^2.6.0",
+		"vaul": "^1.1.2",
+		"zod": "^3.24.1",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@eslint-react/eslint-plugin": "^1.19.0",
-		"@hookform/devtools": "^4.3.1",
-		"@iconify/react": "^5.1.0",
-		"@tanstack/eslint-plugin-query": "^5.62.1",
-		"@tanstack/react-query-devtools": "^5.62.7",
+		"@eslint-react/eslint-plugin": "^1.23.2",
+		"@hookform/devtools": "^4.3.3",
+		"@iconify/react": "^5.2.0",
+		"@tanstack/eslint-plugin-query": "^5.62.16",
+		"@tanstack/react-query-devtools": "^5.62.16",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "^22.10.2",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@types/aos": "^3.0.7",
+		"@types/node": "^22.10.5",
+		"@types/react": "^19.0.3",
+		"@types/react-dom": "^19.0.2",
 		"@vitejs/plugin-react-swc": "^3.7.2",
-		"@zayne-labs/eslint-config": "^0.3.0",
+		"@zayne-labs/eslint-config": "^0.5.0",
 		"@zayne-labs/tsconfig": "^0.2.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.16.0",
+		"eslint": "^9.17.0",
 		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
 		"eslint-plugin-tailwindcss": "^3.17.5",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.2.11",
+		"lint-staged": "^15.3.0",
 		"postcss": "^8.4.49",
 		"prettier": "^3.4.2",
 		"prettier-plugin-classnames": "^0.7.5",
 		"prettier-plugin-merge": "^0.7.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"tailwindcss": "^3.4.16",
+		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.7.2",
-		"vite": "^6.0.3",
+		"vite": "^6.0.7",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
