--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^3.10.0",
+		"@hookform/resolvers": "^4.1.0",
 		"@number-flow/react": "^0.5.5",
 		"@radix-ui/react-focus-scope": "^1.1.2",
 		"@radix-ui/react-select": "^2.1.6",
-		"@tanstack/react-query": "^5.66.7",
+		"@tanstack/react-query": "^5.66.8",
 		"@zayne-labs/callapi": "1.6.7",
-		"@zayne-labs/toolkit": "0.8.36",
+		"@zayne-labs/toolkit": "0.8.39",
 		"@zayne-labs/ui-react": "^0.2.2",
 		"aos": "3.0.0-beta.6",
 		"clsx": "^2.1.1",
@@ -31,33 +31,33 @@
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-hook-form": "^7.54.2",
-		"react-router-dom": "7.1.5",
+		"react-router": "7.2.0",
 		"recharts": "^2.15.1",
 		"remixicon": "^4.6.0",
-		"sonner": "^1.7.4",
+		"sonner": "^2.0.1",
 		"tailwind-merge": "^2.6.0",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@eslint-react/eslint-plugin": "^1.26.2",
+		"@eslint-react/eslint-plugin": "^1.27.0",
 		"@hookform/devtools": "^4.3.3",
 		"@iconify/react": "^5.2.0",
-		"@tanstack/eslint-plugin-query": "^5.66.0",
-		"@tanstack/react-query-devtools": "^5.66.7",
+		"@tanstack/eslint-plugin-query": "^5.66.1",
+		"@tanstack/react-query-devtools": "^5.66.8",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/aos": "^3.0.7",
 		"@types/node": "^22.13.4",
-		"@types/react": "^19.0.8",
-		"@types/react-dom": "^19.0.3",
-		"@vitejs/plugin-react-swc": "^3.7.2",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react-swc": "^3.8.0",
 		"@zayne-labs/eslint-config": "^0.5.1",
 		"@zayne-labs/tsconfig": "^0.2.1",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.20.1",
 		"eslint-plugin-react-hooks": "^5.1.0",
-		"eslint-plugin-react-refresh": "^0.4.18",
+		"eslint-plugin-react-refresh": "^0.4.19",
 		"eslint-plugin-tailwindcss": "^3.18.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.4.3",
