--- a/package.json
+++ b/package.json
@@ -10,66 +10,64 @@
 		"check-types": "tsc --pretty -p tsconfig.json",
 		"dev": "vite",
 		"lint:check-types": "tsc --pretty -p tsconfig.json",
-		"lint:eslint": "eslint . --cache --max-warnings 0 --report-unused-disable-directives",
-		"lint:format": "prettier --cache --write .",
+		"lint:eslint": "eslint . --max-warnings 0",
+		"lint:format": "prettier --write .",
 		"prepare": "husky",
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^4.1.0",
-		"@number-flow/react": "^0.5.5",
+		"@hookform/resolvers": "^4.1.3",
+		"@number-flow/react": "^0.5.8",
 		"@radix-ui/react-focus-scope": "^1.1.2",
 		"@radix-ui/react-select": "^2.1.6",
-		"@tanstack/react-query": "^5.66.8",
-		"@zayne-labs/callapi": "1.6.7",
-		"@zayne-labs/toolkit": "0.8.39",
-		"@zayne-labs/ui-react": "^0.2.2",
+		"@tanstack/react-query": "^5.70.0",
+		"@zayne-labs/callapi": "1.6.15",
+		"@zayne-labs/toolkit": "0.8.62",
+		"@zayne-labs/ui-react": "^0.5.0",
 		"aos": "3.0.0-beta.6",
 		"clsx": "^2.1.1",
 		"export-to-csv": "^1.4.0",
-		"next-themes": "^0.4.4",
-		"react": "19.0.0",
-		"react-dom": "19.0.0",
-		"react-hook-form": "^7.54.2",
-		"react-router": "7.2.0",
+		"next-themes": "^0.4.6",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-hook-form": "^7.55.0",
+		"react-router": "7.4.1",
 		"recharts": "^2.15.1",
 		"remixicon": "^4.6.0",
-		"sonner": "^2.0.1",
-		"tailwind-merge": "^2.6.0",
+		"sonner": "^2.0.2",
+		"tailwind-merge": "^3.0.2",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@eslint-react/eslint-plugin": "^1.27.0",
+		"@eslint-react/eslint-plugin": "^1.38.4",
 		"@hookform/devtools": "^4.3.3",
 		"@iconify/react": "^5.2.0",
-		"@tanstack/eslint-plugin-query": "^5.66.1",
-		"@tanstack/react-query-devtools": "^5.66.8",
+		"@tailwindcss/vite": "^4.0.17",
+		"@tanstack/eslint-plugin-query": "^5.68.0",
+		"@tanstack/react-query-devtools": "^5.70.0",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/aos": "^3.0.7",
-		"@types/node": "^22.13.4",
-		"@types/react": "^19.0.10",
+		"@types/node": "^22.13.14",
+		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
-		"@vitejs/plugin-react-swc": "^3.8.0",
-		"@zayne-labs/eslint-config": "^0.5.1",
-		"@zayne-labs/tsconfig": "^0.2.1",
-		"autoprefixer": "^10.4.20",
-		"eslint": "^9.20.1",
-		"eslint-plugin-react-hooks": "^5.1.0",
+		"@vitejs/plugin-react-swc": "^3.8.1",
+		"@zayne-labs/eslint-config": "^0.7.9",
+		"@zayne-labs/tsconfig": "^0.7.9",
+		"eslint": "^9.23.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
-		"eslint-plugin-tailwindcss": "^3.18.0",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.4.3",
-		"postcss": "^8.5.3",
-		"prettier": "^3.5.1",
-		"prettier-plugin-classnames": "^0.7.6",
-		"prettier-plugin-merge": "^0.7.2",
+		"lint-staged": "^15.5.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-classnames": "^0.7.7",
+		"prettier-plugin-merge": "^0.7.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.17",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.7.3",
-		"vite": "^6.1.1",
+		"typescript": "^5.8.2",
+		"vite": "^6.2.3",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
