--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
 		{
 			"source": "/(.*)",
 			"destination": "/"
+		},
+		{
+			"source": "/api/:path*",
+			"destination": "https://api.schoolcare.com.ng/api/:path*"
 		}
 	]
 }
