--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
-		"@number-flow/react": "^0.5.8",
+		"@number-flow/react": "^0.5.9",
 		"@radix-ui/react-focus-scope": "^1.1.2",
 		"@radix-ui/react-select": "^2.1.6",
 		"@tanstack/react-query": "^5.71.10",
 		"@zayne-labs/callapi": "1.6.22",
-		"@zayne-labs/toolkit": "0.9.2",
-		"@zayne-labs/ui-react": "^0.5.2",
+		"@zayne-labs/toolkit-core": "^0.9.2",
+		"@zayne-labs/toolkit-react": "^0.9.2",
+		"@zayne-labs/toolkit-type-helpers": "^0.9.2",
+		"@zayne-labs/ui-react": "^0.6.1",
 		"aos": "3.0.0-beta.6",
 		"clsx": "^2.1.1",
 		"export-to-csv": "^1.4.0",
@@ -42,7 +44,7 @@
 	},
 	"devDependencies": {
 		"@eslint-react/eslint-plugin": "^1.40.3",
-		"@hookform/devtools": "^4.3.3",
+		"@hookform/devtools": "^4.4.0",
 		"@iconify/react": "^5.2.1",
 		"@tailwindcss/vite": "^4.1.3",
 		"@tanstack/eslint-plugin-query": "^5.71.5",
