--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
 
 	"rewrites": [
 		{
+			"source": "/api/:path*",
+			"destination": "https://api.schoolcare.com.ng/api/:path*"
+		},
+		{
 			"source": "/(.*)",
 			"destination": "/index.html"
 		}
