--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
 		"@number-flow/react": "^0.5.9",
-		"@radix-ui/react-focus-scope": "^1.1.2",
-		"@radix-ui/react-select": "^2.1.6",
-		"@tanstack/react-query": "^5.72.0",
-		"@zayne-labs/callapi": "1.6.22",
-		"@zayne-labs/toolkit-core": "^0.9.2",
-		"@zayne-labs/toolkit-react": "^0.9.2",
-		"@zayne-labs/toolkit-type-helpers": "^0.9.2",
-		"@zayne-labs/ui-react": "^0.6.2",
+		"@radix-ui/react-focus-scope": "1.1.2",
+		"@radix-ui/react-select": "^2.1.7",
+		"@tanstack/react-query": "^5.72.2",
+		"@zayne-labs/callapi": "1.6.24",
+		"@zayne-labs/toolkit-core": "^0.9.3",
+		"@zayne-labs/toolkit-react": "^0.9.3",
+		"@zayne-labs/toolkit-type-helpers": "^0.9.3",
+		"@zayne-labs/ui-react": "^0.7.0",
 		"aos": "3.0.0-beta.6",
 		"clsx": "^2.1.1",
 		"export-to-csv": "^1.4.0",
@@ -43,20 +43,20 @@
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@eslint-react/eslint-plugin": "^1.40.4",
+		"@eslint-react/eslint-plugin": "^1.43.0",
 		"@hookform/devtools": "^4.4.0",
 		"@iconify/react": "^5.2.1",
 		"@tailwindcss/vite": "^4.1.3",
-		"@tanstack/eslint-plugin-query": "^5.72.0",
-		"@tanstack/react-query-devtools": "^5.72.0",
+		"@tanstack/eslint-plugin-query": "^5.72.2",
+		"@tanstack/react-query-devtools": "^5.72.2",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/aos": "^3.0.7",
 		"@types/node": "^22.14.0",
 		"@types/react": "^19.1.0",
-		"@types/react-dom": "^19.1.1",
+		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react-swc": "^3.8.1",
-		"@zayne-labs/eslint-config": "^0.7.9",
-		"@zayne-labs/tsconfig": "^0.7.9",
+		"@zayne-labs/eslint-config": "^0.8.0",
+		"@zayne-labs/tsconfig": "^0.8.0",
 		"eslint": "^9.24.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
@@ -67,7 +67,7 @@
 		"prettier-plugin-merge": "^0.7.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^4.1.3",
-		"tailwindcss-animate": "^1.0.7",
+		"tw-animate-css": "^1.2.5",
 		"typescript": "^5.8.3",
 		"vite": "^6.2.5",
 		"vite-tsconfig-paths": "^5.1.4"
