--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
+		"@lottiefiles/dotlottie-react": "^0.13.3",
 		"@number-flow/react": "^0.5.9",
 		"@radix-ui/react-select": "^2.1.7",
 		"@tanstack/react-query": "^5.72.2",
