--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
 		"@hookform/resolvers": "^5.0.1",
 		"@lottiefiles/dotlottie-react": "^0.13.3",
 		"@number-flow/react": "^0.5.9",
-		"@radix-ui/react-select": "^2.1.7",
-		"@tanstack/react-query": "^5.72.2",
-		"@zayne-labs/callapi": "1.6.24",
+		"@tanstack/react-query": "^5.74.3",
+		"@zayne-labs/callapi": "1.7.1",
 		"@zayne-labs/toolkit-core": "^0.9.3",
 		"@zayne-labs/toolkit-react": "^0.9.3",
 		"@zayne-labs/toolkit-type-helpers": "^0.9.3",
-		"@zayne-labs/ui-react": "^0.7.1",
+		"@zayne-labs/ui-react": "^0.7.3",
 		"aos": "3.0.0-beta.6",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"export-to-csv": "^1.4.0",
 		"next-themes": "^0.4.6",
+		"radix-ui": "^1.2.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-hook-form": "^7.55.0",
@@ -43,33 +44,33 @@
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@eslint-react/eslint-plugin": "^1.43.0",
+		"@eslint-react/eslint-plugin": "^1.48.2",
 		"@hookform/devtools": "^4.4.0",
 		"@iconify/react": "^5.2.1",
-		"@tailwindcss/vite": "^4.1.3",
-		"@tanstack/eslint-plugin-query": "^5.72.2",
-		"@tanstack/react-query-devtools": "^5.72.2",
+		"@tailwindcss/vite": "^4.1.4",
+		"@tanstack/eslint-plugin-query": "^5.73.3",
+		"@tanstack/react-query-devtools": "^5.74.3",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/aos": "^3.0.7",
-		"@types/node": "^22.14.0",
-		"@types/react": "^19.1.0",
+		"@types/node": "^22.14.1",
+		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
-		"@vitejs/plugin-react-swc": "^3.8.1",
-		"@zayne-labs/eslint-config": "^0.8.0",
-		"@zayne-labs/tsconfig": "^0.8.0",
+		"@vitejs/plugin-react-swc": "^3.9.0",
+		"@zayne-labs/eslint-config": "^0.8.1",
+		"@zayne-labs/tsconfig": "^0.8.1",
 		"eslint": "^9.24.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.5.0",
+		"lint-staged": "^15.5.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-classnames": "^0.7.7",
 		"prettier-plugin-merge": "^0.7.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^4.1.3",
+		"tailwindcss": "^4.1.4",
 		"tw-animate-css": "^1.2.5",
 		"typescript": "^5.8.3",
-		"vite": "^6.2.5",
+		"vite": "^6.3.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
