--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
 		"@hookform/resolvers": "^5.0.1",
 		"@lottiefiles/dotlottie-react": "^0.13.5",
 		"@number-flow/react": "^0.5.9",
-		"@tanstack/react-query": "^5.75.1",
-		"@zayne-labs/callapi": "1.7.8",
-		"@zayne-labs/toolkit-core": "^0.9.35",
-		"@zayne-labs/toolkit-react": "^0.9.35",
-		"@zayne-labs/toolkit-type-helpers": "^0.9.35",
-		"@zayne-labs/ui-react": "^0.8.18",
+		"@tanstack/react-query": "^5.75.2",
+		"@unpic/react": "^1.0.1",
+		"@zayne-labs/callapi": "1.7.15",
+		"@zayne-labs/toolkit-core": "^0.9.40",
+		"@zayne-labs/toolkit-react": "^0.9.40",
+		"@zayne-labs/toolkit-type-helpers": "^0.9.40",
+		"@zayne-labs/ui-react": "^0.9.6",
 		"aos": "3.0.0-beta.6",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -32,7 +33,7 @@
 		"radix-ui": "^1.3.4",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"react-hook-form": "^7.56.1",
+		"react-hook-form": "^7.56.2",
 		"react-router": "7.5.3",
 		"recharts": "^2.15.3",
 		"remixicon": "^4.6.0",
@@ -48,7 +49,7 @@
 		"@iconify/react": "^6.0.0",
 		"@tailwindcss/vite": "^4.1.5",
 		"@tanstack/eslint-plugin-query": "^5.74.7",
-		"@tanstack/react-query-devtools": "^5.75.1",
+		"@tanstack/react-query-devtools": "^5.75.2",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/aos": "^3.0.7",
 		"@types/node": "^22.15.3",
